# tbsw

./: .gitignore  CITATION.cff  CMakeLists.txt  INSTALL  INSTALL.md  README  README.md  README_X0  README_X0.md  README_X0Calibration  README_X0Image  install.sh  make_clean.sh
source/: CMakeLists.txt
source/CMakeModules/: MacroCheckDeps.cmake  MacroLoadPackage.cmake
source/EudaqInput/: CMakeLists.txt
source/EudaqInput/config/: BuildSetup.cmake  EudaqInput.cmake.in
source/EudaqInput/include/: DEPFETHybrid6Unpacker.h  DEPFETUnpacker.h  DetectorEvent.hh  EudaqInputProcessor.h  FileReader.hh  NIUnpacker.h  PyBARUnpacker.h  RawDataEvent.hh  Serializable.hh  Time.hh  USBPixUnpacker.h  counted_ptr.hh  depfetInterpreter.h  dhh_daq_interpreter.h
source/EudaqInput/source/include/: BufferSerializer.hh  DEPFETADCValues.hh  DEPFETEvent.hh  DEPFETHybrid5Unpacker.h  DEPFETHybrid6Unpacker.h  DEPFETUnpacker.h  DataConverterPlugin.hh  EudaqInput.h  EudaqInputProcessor.h  Event.hh  Exception.hh  FileNamer.hh  FileReader.hh  FileSerializer.hh  NIUnpacker.h  OptionParser.hh  PluginManager.hh  PyBARUnpacker.h  Serializer.hh  TLUEvent.hh  USBPixUnpacker.h  Utils.hh  depfetInterpreter.h  dhh_daq_interpreter.h
source/EudaqInput/source/src/: BufferSerializer.cc  Converter.cxx  DEPFETConverterPlugin.cc  DEPFETHybrid5Unpacker.cc  DEPFETHybrid6Unpacker.cc  DEPFETUnpacker.cc  DataConverterPlugin.cc  DetectorEvent.cc  EudaqInputProcessor.cc  Exception.cc  FileNamer.cc  FileReader.cc  Time.cc  (+11 more)
source/EudaqInput/src/: DEPFETHybrid6Unpacker.cc  DEPFETUnpacker.cc  DetectorEvent.cc  EudaqInputProcessor.cc  Event.cc  FileReader.cc  NIUnpacker.cc  PyBARUnpacker.cc  TLUEvent.cc  USBPixUnpacker.cc  Utils.cc  dhh_daq_interpreter.cpp
source/Marlin/: BuildSetup.cmake  CMakeLists.txt
source/Marlin/src/: CMProcessor.cc  CMakeLists.txt  Global.cc  LCIOOutputProcessor.cc  Marlin.cc  Processor.cc  ProcessorLoader.cc  ProcessorMgr.cc  TestProcessor.cc  XMLParser.cc  tinyxml.cc  tinyxmlerror.cc  tinyxmlparser.cc
source/Marlin/streamlog/: CMakeLists.txt
source/SiPxlDigi/: CMakeLists.txt
source/SiPxlDigi/config/: BuildSetup.cmake  SiPxlDigi.cmake.in
source/SiPxlDigi/source/: CMakeLists.txt
source/TBReco/: CMakeLists.txt
source/TBReco/config/: BuildSetup.cmake  TBReco.cmake.in
source/TBReco/include/: AsciiInputProcessor.h  BeamSpotAligner.h  ClusterShapeToAsciiPrinter.h  CogHitMaker.h  Correlator.h  CorryInputProcessor.h  DiamondRawHitSorter.h  EventEmbedder.h  EventViewer.h  FastSimulation.h  FastTracker.h  Geometry.h  GoeClusterCalibrator.h  GoeClusterCalibratorForMC.h  GoeHitMaker.h  HitsFilterProcessor.h  HotPixelKiller.h  HotStripKiller.h  KalmanAligner.h  MCTreeProducer.h  PixelChargeCalibrator.h  PixelClusterizer.h  PixelDUTAnalyzer.h  RawHitDQM.h  SiPixDigitizer.h  SmearingDigitizer.h  StripClusterizer.h  StripDUTAnalyzer.h  StripHitMaker.h  TelUnpacker.h  TrackFitAnalyzer.h  TrackFitDQM.h  TrackFitValidation.h  TriggerGenerator.h  TriplettCorrelator.h  X0ImageProducer.h
source/TBReco/src/: AsciiInputProcessor.cc  BeamSpotAligner.cc  ClusterShapeToAsciiPrinter.cc  CogHitMaker.cc  Correlator.cc  CorryInputProcessor.cc  DEPFETPedestalNoiseProcessor.cc  DiamondRawHitSorter.cc  EventEmbedder.cc  EventViewer.cc  FastSimulation.cc  FastTracker.cc  Geometry.cc  GoeClusterCalibrator.cc  GoeClusterCalibratorForMC.cc  GoeHitMaker.cc  HitsFilterProcessor.cc  HotPixelKiller.cc  HotStripKiller.cc  KalmanAligner.cc  MCTreeProducer.cc  ParticleGunGenerator.cc  PixelChargeCalibrator.cc  PixelClusterizer.cc  PixelDUTAnalyzer.cc  RawDataSparsifier.cc  RawHitDQM.cc  SiPixDigitizer.cc  SmearingDigitizer.cc  StripClusterizer.cc  StripDUTAnalyzer.cc  StripHitMaker.cc  TelUnpacker.cc  TrackFitAnalyzer.cc  TrackFitDQM.cc  TrackFitValidation.cc  TriggerGenerator.cc  TriplettCorrelator.cc  X0ImageProducer.cc
source/TBTools/: CMakeLists.txt
source/TBTools/config/: BuildSetup.cmake  TBTools.cmake.in
source/TBTools/include/: AlignEvent.h  AlignableDet.h  Constants.h  DEPFET.h  Det.h  DetCreatorBase.h  DetCreatorFactory.h  DetCreatorManager.h  GenericTrackFitter.h  GenericTrackModel.h  HitFactory.h  KalmanAlignmentAlgorithm2.h  KalmanAlignmentInputProvider.h  MaterialEffect.h  PhysicalConstants.h  PixelCluster.h  PolyClusterDescriptor.h  PolyDet.h  PolyDetCreator.h  PolyPixelCluster.h  ReferenceFrame.h  SeedGenerator.h  SquareClusterDescriptor.h  SquareDet.h  SquareDetCreator.h  StraightLineTrackModel.h  StripCluster.h  TBDetector.h  TBHit.h  TBKalmanB.h  TBKalmanMSC.h  TBTrack.h  TBTrackElement.h  TBTrackState.h  TBVertex.h  TBVertexFitter.h  TrackInputProvider.h  Utilities.h
source/TBTools/src/: AlignableDet.cc  Det.cc  DetCreatorManager.cc  HelixTrackModel.cc  HitFactory.cc  KalmanAlignmentAlgorithm2.cc  KalmanAlignmentInputProvider.cc  MaterialEffect.cc  MatrixDecoder.cc  PixelCluster.cc  PolyClusterDescriptor.cc  PolyDet.cc  PolyDetCreator.cc  PolyPixelCluster.cc  ReferenceFrame.cc  SeedGenerator.cc  SquareClusterDescriptor.cc  SquareDet.cc  SquareDetCreator.cc  StripCluster.cc  TBDetector.cc  TBHit.cc  TBKalmanB.cc  TBKalmanMSC.cc  TBTrack.cc  TBTrackElement.cc  TBTrackState.cc  TBVertexFitter.cc  TrackInputProvider.cc  Utilities.cc
source/X0Tools/: CMakeLists.txt
source/X0Tools/config/: BuildSetup.cmake  X0Tools.cmake.in
source/eudaq/main/: Makefile
source/gear/: CMakeLists.txt
source/gear/config/: BuildSetup.cmake  aid.values.cpp.properties  gear.properties
source/lccd/: BuildSetup.cmake  CMakeLists.txt
source/lcio/: BuildSetup.cmake  CMakeLists.txt  build.xml
source/lcio/config/: aid.imports.java.properties  aid.includes.cpp.properties  aid.types.java.properties  aid.values.cpp.properties  ant.properties  lcio-java.properties  lcio.properties
source/lcio/lcio/: CMakeLists.txt
source/lcio/sio/: CMakeLists.txt
source/tbsw/: DQMplots.py  DetLayoutGen.py  GenerateImage.py  X0Calibration.py  __init__.py  clusterDB.py  createGearfile.py  efficiency.py  gear.py  inpixel.py  path_utils.py  residuals.py  tbsw.py  x0script_functions.py
source/tbsw/x0imaging/: GenerateImage.py  __init__.py
(+896 files in other folders)
